@@ -9,6 +9,9 @@ user fstuyk!
 Fixed bug that prevented overriding the FTP directory in section
 [[FTP]] of the configuration file.
 
+Day plots now show 24 hours instead of 27. If you want the old
+behavior, then change option "time_length" to 97200.
+
 
 2.3.1 04/15/13
 
